<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="backup_title">Backup &amp; restore</string>
    <string name="backup_back_description">Back</string>
    <string name="backup_create_title">Backup</string>
    <string name="backup_create_body">Save an encrypted copy of your notes, folders and recordings to a file. You will need the passphrase to restore it, and it cannot be recovered.</string>
    <string name="backup_passphrase_label">Passphrase</string>
    <string name="backup_passphrase_confirm_label">Repeat passphrase</string>
    <string name="backup_passphrase_too_short">Use at least %1$d characters.</string>
    <string name="backup_passphrase_mismatch">The passphrases do not match.</string>
...
